07-Rancher-Deneme/02-Rancher-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rancher-servisi
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: rancher-demo
  sessionAffinity: None
  type: ClusterIP
