07-Rancher-Deneme/03-Rancher-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-rancher-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: rancher.techakademi.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rancher-servisi
            port:
              number: 80
