07-Rancher-Deneme/04-Ramcher-stack-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: rancher-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rancher-demo
    spec:
      containers:
      - image: monachus/rancher-demo:latest
        name: rancher-demo
---
apiVersion: v1
kind: Service
metadata:
  name: rancher-servisi
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: rancher-demo
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-rancher-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: rancher.techakademi.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rancher-servisi
            port:
              number: 80
